<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/fragmentBasketContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.navigation.BasketFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/shoppingBasketRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/makeOrderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingBasketRecyclerView"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/text_cas_prihoda"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/title_time_basket"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/makeOrderButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoppingBasketRecyclerView"
            tools:text="@string/title_time_basket" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/incMinutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_up_24px" />


            <TextView
                android:id="@+id/minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minutes_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/minutes_text" />

            <ImageView
                android:id="@+id/decMinutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24px" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="26dp"
            android:text="@string/title_minutes"
            android:textAlignment="center"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp"
            tools:text="@string/title_minutes" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/makeOrderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/add_to_basket_button_shape"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:paddingStart="50dp"
            android:text="Naročilo"
            android:textColor="@color/colorLightGrey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="3"
            android:tint="@color/colorLightGrey"
            app:srcCompat="@drawable/ic_baseline_shopping_cart_24px" />
    </LinearLayout>

    <TextView
        android:id="@+id/emptyBasketText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:lines="1"
        android:padding="10dp"
        android:text="@string/empty_basket"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/shoppingBasketRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />
</android.support.constraint.ConstraintLayout>